<resources>
    <string name="app_name">RecyclerViewCardView</string>
    <string name="todo">TODO</string>
    <string name="linear_layout_horizontal">linear Layout_Horizontal</string>
    <string name="linear_layout_vertical">Linear Layout Vertical</string>
    <string name="grid_view">Grid View</string>
    <string name="staggered_view_horizontal">Staggered View Horizontal</string>
    <string name="staggered_view_vertical">Staggered View Vertical</string>
</resources>
